--- a/Nepalerts/Base.lproj/Main.storyboard
+++ b/Nepalerts/Base.lproj/Main.storyboard
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13B42" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="8eQ-Sm-TqJ">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4514" systemVersion="13C64" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="8eQ-Sm-TqJ">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3747"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3746"/>
     </dependencies>
     <scenes>
         <!--Register View Controller - Nep Alerts-->
@@ -104,7 +104,13 @@
                             <constraint firstItem="7KP-Sd-ADE" firstAttribute="top" secondItem="hjX-ac-gYz" secondAttribute="bottom" id="pZf-lh-3MC"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="Nep Alerts" id="HDy-g9-fUq"/>
+                    <navigationItem key="navigationItem" title="Nep Alerts" id="HDy-g9-fUq">
+                        <barButtonItem key="rightBarButtonItem" title="Refresh" id="zqA-fu-Rqj">
+                            <connections>
+                                <action selector="refreshTapped:" destination="vXZ-lx-hvc" id="IjS-FX-8Mq"/>
+                            </connections>
+                        </barButtonItem>
+                    </navigationItem>
                     <connections>
                         <outlet property="scrollView" destination="7KP-Sd-ADE" id="fbe-J7-21u"/>
                         <outlet property="tfArea" destination="bcw-Ma-Cfj" id="bCx-xt-SNB"/>
